Leganeski's Oynag System Atmosphere Curves
* **Increase mass of Viszra. Same radius, new surface gravity of 0.2139.**
    * this was done to shorten the calculated atmosphere height
    * we can't guarantee Oynag system's stability with this change, but PJ2 isnt meant to be run with Principia anyway.
* New, realistic atmosphere curves for Viszra, Jejunum, Cricoid, and Zeppeli, generated by Leganeski using OhioBob's calculator.

No visual changes just yet. Look out for those coming soon.

--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/2_Jejunum.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/2_Jejunum.cfg
@@ -21,6 +21,9 @@
 			// 1/100 earth mass in kilograms
 			mass = 5.97219e22
 			@mass *= 0.0123
+
+			albedo = 0.25
+
 			ScienceValues
  		        {
 				//uh
@@ -399,8 +402,8 @@
 		{
 			enabled =	True
 			oxygen =	False
-			altitude =	25000
-			adiabaticIndex =	1.44
+			altitude =	86000  // 25000
+			adiabaticIndex =	1.40  // 1.44
 			//atmosphereMolarMass =	0.0022 //originally hydrogen.
 			atmosphereMolarMass = 0.02801  // who knows, but I'm assuming nitrogen -Leganeski
 			temperatureSeaLevel =	111
@@ -410,84 +413,86 @@
 			{
 				waveLength = 0.6615379,0.6626924,0.6353847,0
 			}
+			//Leganeski atmosphere curves:
 			pressureCurve
 			{
-key =	0	5.06625	-1.0037998E-03	-1.0037998E-03
-key =	1250	3.8115	-9.1175E-04	-9.1175E-04
-key =	2500	2.786875	-7.364002E-04	-7.364002E-04
-key =	3750	1.9705	-5.7944E-04	-5.7944E-04
-key =	5000	1.338275	-4.3797E-04	-4.3797E-04
-key =	6250	0.875575	-3.2033E-04	-3.2033E-04
-key =	7500	0.53745	-2.2694E-04	-2.2694E-04
-key =	8750	0.308225	-1.4269E-04	-1.4269E-04
-key =	10000	0.180725	-7.761E-05	-7.761E-05
-key =	11250	0.1142	-4.446E-05	-4.446E-05
-key =	12500	0.069575	-2.884E-05	-2.884E-05
-key =	13750	0.0421	-1.704E-05	-1.704E-05
-key =	15000	0.026975	-9.04E-06	-9.04E-06
-key =	16250	0.0195	-4.86E-06	-4.86E-06
-key =	17500	0.014825	-3.65E-06	-3.65E-06
-key =	18750	0.010375	-3.25E-06	-3.25E-06
-key =	20000	0.0067	-2.63E-06	-2.63E-06
-key =	21250	0.0038	-2.E-06	-2.E-06
-key =	22500	0.0017	-1.35E-06	-1.35E-06
-key =	23750	0.000425	-6.8E-07	-6.8E-07
-key =	25000	0	-3.4E-07	-3.4E-07
+				key =	0	5.06625E+00	0.00000E+00	-3.26316E-04
+				key =	8954	2.84896E+00	-2.26531E-04	-2.26531E-04
+				key =	16234	1.60209E+00	-1.30213E-04	-1.30213E-04
+				key =	23427	9.00921E-01	-7.47587E-05	-7.47587E-05
+				key =	30543	5.06625E-01	-4.28681E-05	-4.28681E-05
+				key =	37590	2.84896E-01	-2.45502E-05	-2.45502E-05
+				key =	44577	1.60209E-01	-1.40415E-05	-1.40415E-05
+				key =	51512	9.00921E-02	-8.02038E-06	-8.02038E-06
+				key =	58405	5.06625E-02	-4.57503E-06	-4.57503E-06
+				key =	65265	2.84896E-02	-2.60619E-06	-2.60619E-06
+				key =	72099	1.60209E-02	-1.48261E-06	-1.48261E-06
+				key =	78920	9.00921E-03	-8.41837E-07	-8.41837E-07
+				key =	86000	0.00000E+00	0.00000E+00	0.00000E+00
 			}
 			temperatureCurve
 			{
-key =	0	111	-0.025666668	-0.025666668
-key =	3000	81.84427767	-0.0036354352	-0.0036242288
-key =	5250	81.84427767	0.0036242288	0.0036242288
-key =	7750	102.6697936	0.0019808576	0.0019808576
-key =	14000	102.6697936	-0.0027317132	-0.0027317132
-key =	20000	70.86355108	-0.0036354352	-0.0036354352
-key =	22500	70.86355108	0.001895098	0.001895098
-key =	25000	87.1453181	0.0027784164	0.0027784164
-key =	37500	0	-0.0017984364	-0.0017984364
+				key =	0	101	0.00000E+00	-1.67523E-03
+				key =	8954	86	-1.67523E-03	2.74725E-04
+				key =	16234	88	2.74725E-04	1.39024E-04
+				key =	23427	89	1.39024E-04	-2.81057E-04
+				key =	30543	87	-2.81057E-04	-1.41904E-04
+				key =	37590	86	-1.41904E-04	-2.86246E-04
+				key =	44577	84	-2.86246E-04	-4.32588E-04
+				key =	51512	81	-4.32588E-04	-2.90149E-04
+				key =	58405	79	-2.90149E-04	-2.91545E-04
+				key =	65265	77	-2.91545E-04	-1.46327E-04
+				key =	72099	76	-1.46327E-04	-2.93212E-04
+				key =	78920	74	-2.93212E-04	0.00000E+00
+				key =	86000	74	0.00000E+00	0.00000E+00
 			}
 			temperatureSunMultCurve
 			{
-key =	0	1	0	0
-key =	1923.076923	0.5	-0.00024	-0.0004105796
-key =	2119.044231	0	0	0
-key =	3858.265383	0	0	0
-key =	9105.634614	0.2	0	0
-key =	13807.72308	0.2	0	0
-key =	17555.6923	0	0	0
-key =	25000	0.4	0	0
+				key =	0	1.000	0.00000E+00	-6.66741E-05
+				key =	8954	0.403	-6.66741E-05	-5.42582E-05
+				key =	16234	0.008	-5.42582E-05	-3.44780E-05
+				key =	23427	-0.240	-3.44780E-05	-8.15065E-06
+				key =	30543	-0.298	-8.15065E-06	4.68284E-06
+				key =	37590	-0.265	4.68284E-06	9.44611E-06
+				key =	44577	-0.199	9.44611E-06	1.25451E-05
+				key =	51512	-0.112	1.25451E-05	1.37821E-05
+				key =	58405	-0.017	1.37821E-05	1.37026E-05
+				key =	65265	0.077	1.37026E-05	1.17062E-05
+				key =	72099	0.157	1.17062E-05	8.35655E-06
+				key =	78920	0.214	8.35655E-06	3.24859E-06
+				key =	86000	0.237	3.24859E-06	0.00000E+00
 			}
 			temperatureLatitudeBiasCurve
 			{
-				key =	0	0.21	0	0
-				key =	38	0	-0.0107	-0.0107
-				key =	90	-0.79	-0.0175	0
+				key =	0	4.24	0	0
+				key =	38	0	-0.2149	-0.2149
+				key =	90	-15.76	-0.3491	0
    			}
   			temperatureLatitudeSunMultCurve
    			{
-				key =	0	1	0	0
-				key =	38	0.79	-0.0107	-0.0107
-				key =	90	0	-0.0175	0
-     			}
-      			temperatureAxialSunBiasCurve
+				key =	0	23	0	0
+				key =	38	19.61	-0.1719	-0.1719
+				key =	90	7	-0.2793	0
+			}
+			temperatureAxialSunBiasCurve
  			{
-				key =	0	0.13	0	-0.0032
-				key =	36	0	-0.004	-0.004
-				key =	126	-0.23	0	0
-				key =	216	0	0.004	0.004
-				key =	306	0.23	0	0
-				key =	360	0.13	-0.0032	0
+				key =	0	-1.32	0	-0.0066
+				key =	16	-1.37	0	0
+				key =	106	0	0.024	0.024
+				key =	196	1.37	0	0
+				key =	286	0	-0.024	-0.024
+				key =	360	-1.32	-0.0066	0
   			}
    			temperatureAxialSunMultCurve
   			{
 				key =	0	0	0	0
 				key =	38	0.5	0.02	0.02
 				key =	90	1	0	0
-    			}
-    			temperatureEccentricityBiasCurve
-    			{
-				key =	0	0.65	0	-1.3
-				key =	1	-0.65	-1.3	0
+			}
+			temperatureEccentricityBiasCurve
+			{
+				key =	0	0.5	0	-1
+				key =	1	-0.5	-1	0
 			}
 		}
 	}
