--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/5_Cricoid.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/5_Cricoid.cfg
@@ -22,6 +22,9 @@
 			// 1/100 earth mass in kilograms
 			mass = 5.97219e22
 			@mass *= 0.00376
+
+			albedo = 0.65
+
 			ScienceValues
  		        {
 				//uh
@@ -492,94 +495,81 @@
 		{
 			enabled =	True
 			oxygen =	False
-			altitude =	35000
-			adiabaticIndex =	1.44
+			altitude =	147000  // 35000
+			adiabaticIndex =	1.40  // 1.44
 			//atmosphereMolarMass =	0.0022 //originally Hydrogen.
 			atmosphereMolarMass = 0.02801  // nitrogen -Leganeski
-			temperatureSeaLevel =	88
+			temperatureSeaLevel =	74  // 88
 			staticPressureASL =	7.09E-01
 			AtmosphereFromGround
 			{
 				waveLength = 0.842,0.83,0.745,0
 			}
+			//Leganeski atmosphere curves:
 			pressureCurve
 			{
-key =	0	7.09E-01	-1.704596E-04	-1.704596E-04
-key =	1750	4.11E-01	-1.387306E-04	-1.387306E-04
-key =	3500	2.24E-01	-8.49064E-05	-8.49064E-05
-key =	5250	1.14E-01	-4.75576E-05	-4.75576E-05
-key =	7000	5.73E-02	-2.42646E-05	-2.42646E-05
-key =	8750	2.89E-02	-1.21488E-05	-1.21488E-05
-key =	10500	1.47E-02	-6.0794E-06	-6.0794E-06
-key =	12250	7.59E-03	-3.0656E-06	-3.0656E-06
-key =	14000	4.02E-03	-1.5488E-06	-1.5488E-06
-key =	15750	2.17E-03	-7.984E-07	-7.984E-07
-key =	17500	1.22E-03	-4.226E-07	-4.226E-07
-key =	19250	6.94E-04	-2.322E-07	-2.322E-07
-key =	21000	4.09E-04	-1.32E-07	-1.32E-07
-key =	22750	2.32E-04	-7.98E-08	-7.98E-08
-key =	24500	1.30E-04	-4.66E-08	-4.66E-08
-key =	26250	6.93E-05	-2.66E-08	-2.66E-08
-key =	28000	3.64E-05	-1.46E-08	-1.46E-08
-key =	29750	1.82E-05	-7.8E-09	-7.8E-09
-key =	31500	9.10E-06	-4.4E-09	-4.4E-09
-key =	33250	2.80E-06	-2.6E-09	-2.6E-09
-key =	35000	0.00E+00	-1.6E-09	-1.6E-09
+				key =	0	7.08971E-01	0.00000E+00	-1.99381E-05
+				key =	20512	3.98684E-01	-1.14617E-05	-1.14617E-05
+				key =	41122	2.24196E-01	-6.57787E-06	-6.57787E-06
+				key =	61864	1.26075E-01	-3.76866E-06	-3.76866E-06
+				key =	82770	7.08971E-02	-2.15555E-06	-2.15555E-06
+				key =	103873	3.98684E-02	-1.23087E-06	-1.23087E-06
+				key =	125210	2.24196E-02	-7.01713E-07	-7.01713E-07
+				key =	147000	0.00000E+00	0.00000E+00	0.00000E+00
 			temperatureCurve
 			{
-key =	0	88	-0.01833333429	-0.01833333429
-key =	4200	64.88555347	-0.002596739429	-0.002588734857
-key =	7350	64.88555347	0.002588734857	0.002588734857
-key =	10850	81.39587242	0.001414898286	0.001414898286
-key =	19600	81.39587242	-0.001951223714	-0.001951223714
-key =	28000	56.18011257	-0.002596739429	-0.002596739429
-key =	31500	56.18011257	0.001353641429	0.001353641429
-key =	35000	69.08818011	0.001984583143	0.001984583143
-key =	52500	0	-0.001284597429	-0.001284597429
+				key =	0	64	0.00000E+00	4.38768E-04
+				key =	20512	73	4.38768E-04	4.85201E-05
+				key =	41122	74	4.85201E-05	-1.92845E-04
+				key =	61864	70	-1.92845E-04	-1.43499E-04
+				key =	82770	67	-1.43499E-04	-9.47733E-05
+				key =	103873	65	-9.47733E-05	-4.68669E-05
+				key =	125210	64	-4.68669E-05	-4.58926E-05
+				key =	147000	63	-4.58926E-05	0.00000E+00
 			}
 			temperatureSunMultCurve
 			{
-key =	0	1	0	0
-key =	2692.307692	0.5	-0.0001714285714	-0.0002932711429
-key =	2966.661923	0	0	0
-key =	5401.571537	0	0	0
-key =	12747.88846	0.2	0	0
-key =	19330.81231	0.2	0	0
-key =	24577.96922	0	0	0
-key =	35000	0.4	0	0
+				key =	0	1.000	0.00000E+00	-5.13358E-05
+				key =	20512	-0.053	-5.13358E-05	-1.10141E-05
+				key =	41122	-0.280	-1.10141E-05	8.91910E-06
+				key =	61864	-0.095	8.91910E-06	1.10016E-05
+				key =	82770	0.135	1.10016E-05	4.07525E-06
+				key =	103873	0.221	4.07525E-06	0.00000E+00
+				key =	125210	0.221	0.00000E+00	0.00000E+00
+				key =	147000	0.221	0.00000E+00	0.00000E+00
 			}
 			temperatureLatitudeBiasCurve
 			{
-key =	0	0.21	0	0
-key =	38	0	-0.0107	-0.0107
-key =	90	-0.79	-0.0175	0
+				key =	0	4.66	0	0
+				key =	38	0	-0.2364	-0.2364
+				key =	90	-17.34	-0.384	0
    			}
   			temperatureLatitudeSunMultCurve
    			{
-key =	0	1	0	0
-key =	38	0.79	-0.0107	-0.0107
-key =	90	0	-0.0175	0
-     			}
-      			temperatureAxialSunBiasCurve
+				key =	0	24	0	0
+				key =	38	20.4	-0.1827	-0.1827
+				key =	90	7	-0.2967	0
+			}
+			temperatureAxialSunBiasCurve
  			{
-key =	0	0.13	0	-0.0032
-key =	36	0	-0.004	-0.004
-key =	126	-0.23	0	0
-key =	216	0	0.004	0.004
-key =	306	0.23	0	0
-key =	360	0.13	-0.0032	0
+				key =	0	-1.09	0	-0.0055
+				key =	16	-1.13	0	0
+				key =	106	0	0.0198	0.0198
+				key =	196	1.13	0	0
+				key =	286	0	-0.0198	-0.0198
+				key =	360	-1.09	-0.0055	0
   			}
    			temperatureAxialSunMultCurve
   			{
-key =	0	0	0	0
-key =	38	0.5	0.02	0.02
-key =	90	1	0	0
-    			}
-    			temperatureEccentricityBiasCurve
-    			{
-key =	0	0.65	0	-1.3
-key =	1	-0.65	-1.3	0
-    			}
+				key =	0	0	0	0
+				key =	38	0.5	0.02	0.02
+				key =	90	1	0	0
+			}
+			temperatureEccentricityBiasCurve
+			{
+				key =	0	0.45	0	-0.9
+				key =	1	-0.45	-0.9	0
+			}
 		}
 	}
 }
