--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/G1_Zeppeli.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/G1_Zeppeli.cfg
@@ -23,6 +23,9 @@
 			// 1/100 earth mass in kilograms
 			mass = 5.97219e22
 			@mass *= 0.0715 
+
+			albedo = 0.423
+
 			ScienceValues
  		        {
 				//uh
@@ -475,8 +478,8 @@
 		{
 			enabled =	True
 			oxygen =	False
-			altitude =	40000	
-			adiabaticIndex =	1.44
+			altitude =	91000  // 40000	
+			adiabaticIndex =	1.40  // 1.44
 			//atmosphereMolarMass =	0.0022 //Originally hydrogen.
 			atmosphereMolarMass = 0.02805  // nitrogen, 2% ethane -Leganeski
 			temperatureSeaLevel =	91
@@ -485,83 +488,97 @@
 			{
 				waveLength = 0.6884615,0.6973078,0.6584615,0
 			}
+			//Leganeski atmosphere curves:
 			pressureCurve
 			{
-key =	0	10.1325	-1.25474975E-03	-1.25474975E-03
-key =	2000	7.623	-1.1396875E-03	-1.1396875E-03
-key =	4000	5.57375	-9.2050025E-04	-9.2050025E-04
-key =	6000	3.941	-7.243E-04	-7.243E-04
-key =	8000	2.67655	-5.474625E-04	-5.474625E-04
-key =	10000	1.75115	-4.004125E-04	-4.004125E-04
-key =	12000	1.0749	-2.83675E-04	-2.83675E-04
-key =	14000	0.61645	-1.783625E-04	-1.783625E-04
-key =	16000	0.36145	-9.70125E-05	-9.70125E-05
-key =	18000	0.2284	-5.5575E-05	-5.5575E-05
-key =	20000	0.13915	-3.605E-05	-3.605E-05
-key =	22000	0.0842	-2.13E-05	-2.13E-05
-key =	24000	0.05395	-1.13E-05	-1.13E-05
-key =	26000	0.039	-6.075E-06	-6.075E-06
-key =	28000	0.02965	-4.5625E-06	-4.5625E-06
-key =	30000	0.02075	-4.0625E-06	-4.0625E-06
-key =	32000	0.0134	-3.2875E-06	-3.2875E-06
-key =	34000	0.0076	-2.5E-06	-2.5E-06
-key =	36000	0.0034	-1.6875E-06	-1.6875E-06
-key =	38000	0.00085	-8.5E-07	-8.5E-07
-key =	40000	0	-4.25E-07	-4.25E-07
+				key =	0	1.01325E+01	0.00000E+00	-8.95597E-04
+				key =	6434	5.69792E+00	-5.17962E-04	-5.17962E-04
+				key =	12717	3.20418E+00	-2.99171E-04	-2.99171E-04
+				key =	18861	1.80184E+00	-1.72558E-04	-1.72558E-04
+				key =	24876	1.01325E+00	-9.93808E-05	-9.93808E-05
+				key =	30774	5.69792E-01	-5.71451E-05	-5.71451E-05
+				key =	36567	3.20418E-01	-3.28039E-05	-3.28039E-05
+				key =	42265	1.80184E-01	-1.87978E-05	-1.87978E-05
+				key =	47880	1.01325E-01	-1.07520E-05	-1.07520E-05
+				key =	53423	5.69792E-02	-6.13816E-06	-6.13816E-06
+				key =	58906	3.20418E-02	-3.49730E-06	-3.49730E-06
+				key =	64340	1.80184E-02	-1.98862E-06	-1.98862E-06
+				key =	69736	1.01325E-02	-1.12844E-06	-1.12844E-06
+				key =	75107	5.69792E-03	-6.38589E-07	-6.38589E-07
+				key =	80462	3.20418E-03	-3.61288E-07	-3.61288E-07
+				key =	85800	1.80184E-03	-2.04344E-07	-2.04344E-07
+				key =	91000	0.00000E+00	0.00000E+00	0.00000E+00
 			temperatureCurve
 			{
-key =	0	91	-0.0160416675	-0.0160416675
-key =	4800	67.09756098	-0.002272147	-0.002265143
-key =	8400	67.09756098	0.002265143	0.002265143
-key =	12400	84.17073171	0.001238036	0.001238036
-key =	22400	84.17073171	-0.00170732075	-0.00170732075
-key =	32000	58.09534368	-0.002272147	-0.002272147
-key =	36000	58.09534368	0.00118443625	0.00118443625
-key =	40000	71.44345898	0.00173651025	0.00173651025
-key =	60000	0	-0.00112402275	-0.00112402275
+				key =	0	83	0.00000E+00	1.55424E-04
+				key =	6434	84	1.55424E-04	1.59160E-04
+				key =	12717	85	1.59160E-04	0.00000E+00
+				key =	18861	85	0.00000E+00	-1.66251E-04
+				key =	24876	84	-1.66251E-04	-1.69549E-04
+				key =	30774	83	-1.69549E-04	-3.45244E-04
+				key =	36567	81	-3.45244E-04	-3.51000E-04
+				key =	42265	79	-3.51000E-04	-1.78094E-04
+				key =	47880	78	-1.78094E-04	-3.60815E-04
+				key =	53423	76	-3.60815E-04	-3.64764E-04
+				key =	58906	74	-3.64764E-04	-1.84026E-04
+				key =	64340	73	-1.84026E-04	-1.85322E-04
+				key =	69736	72	-1.85322E-04	-1.86185E-04
+				key =	75107	71	-1.86185E-04	-1.86741E-04
+				key =	80462	70	-1.86741E-04	-1.87336E-04
+				key =	85800	69	-1.87336E-04	0.00000E+00
+				key =	91000	69	0.00000E+00	0.00000E+00
 			}
 			temperatureSunMultCurve
 			{
-key =	0	1	0	0
-key =	3076.923077	0.5	-0.00015	-0.00025661225
-key =	3390.470769	0	0	0
-key =	6173.224613	0	0	0
-key =	14569.01538	0.2	0	0
-key =	22092.35692	0.2	0	0
-key =	28089.10768	0	0	0
-key =	40000	0.4	0	0
+				key =	0	1.000	0.00000E+00	-6.43457E-05
+				key =	6434	0.586	-6.43457E-05	-5.77749E-05
+				key =	12717	0.223	-5.77749E-05	-4.62240E-05
+				key =	18861	-0.061	-4.62240E-05	-3.00914E-05
+				key =	24876	-0.242	-3.00914E-05	-9.83384E-06
+				key =	30774	-0.300	-9.83384E-06	2.93458E-06
+				key =	36567	-0.283	2.93458E-06	7.37101E-06
+				key =	42265	-0.241	7.37101E-06	1.05076E-05
+				key =	47880	-0.182	1.05076E-05	1.28089E-05
+				key =	53423	-0.111	1.28089E-05	1.40434E-05
+				key =	58906	-0.034	1.40434E-05	1.43541E-05
+				key =	64340	0.044	1.43541E-05	1.37139E-05
+				key =	69736	0.118	1.37139E-05	1.22882E-05
+				key =	75107	0.184	1.22882E-05	9.71055E-06
+				key =	80462	0.236	9.71055E-06	6.36943E-06
+				key =	85800	0.270	6.36943E-06	2.50000E-06
+				key =	91000	0.283	2.50000E-06	0.00000E+00
 			}
 			temperatureLatitudeBiasCurve
 			{
-				key =	0	0.21	0	0
-				key =	38	0	-0.0107	-0.0107
-				key =	90	-0.79	-0.0175	0
+				key =	0	3.6	0	0
+				key =	38	0	-0.1827	-0.1827
+				key =	90	-13.4	-0.2967	0
    			}
   			temperatureLatitudeSunMultCurve
    			{
-				key =	0	1	0	0
-				key =	38	0.79	-0.0107	-0.0107
-				key =	90	0	-0.0175	0
-     			}
-      			temperatureAxialSunBiasCurve
+				key =	0	19	0	0
+				key =	38	16.24	-0.1397	-0.1397
+				key =	90	6	-0.2269	0
+			}
+      		temperatureAxialSunBiasCurve
  			{
-				key =	0	0.13	0	-0.0032
-				key =	36	0	-0.004	-0.004
-				key =	126	-0.23	0	0
-				key =	216	0	0.004	0.004
-				key =	306	0.23	0	0
-				key =	360	0.13	-0.0032	0
+				key =	0	-2.31	0	-0.0116
+				key =	16	-2.41	0	0
+				key =	106	0	0.042	0.042
+				key =	196	2.41	0	0
+				key =	286	0	-0.042	-0.042
+				key =	360	-2.31	-0.0116	0
   			}
    			temperatureAxialSunMultCurve
   			{
 				key =	0	0	0	0
 				key =	38	0.5	0.02	0.02
 				key =	90	1	0	0
-    			}
-    			temperatureEccentricityBiasCurve
-    			{
-				key =	0	0.65	0	-1.3
-				key =	1	-0.65	-1.3	0
+			}
+			temperatureEccentricityBiasCurve
+			{
+				key =	0	1.3	0	-2.6
+				key =	1	-1.3	-2.6	0
 			}
 		}
 	}
