--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Ilmar.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Ilmar.cfg
@@ -116,7 +116,7 @@
 		Atmosphere				
 		{				
 			enabled = True
-			oxygen = False
+			oxygen = True
 			altitude = 91000
 			adiabaticIndex = 1.40
 			atmosphereMolarMass = 0.0299
