--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/IlioC_f_D_i_Jones.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/IlioC_f_D_i_Jones.cfg
@@ -114,16 +114,11 @@
 			atmosphereMolarMass =	0.01802			
 			temperatureSeaLevel =	100		
 			staticPressureASL =	0.506625			
-			temperatureCurve				
-			{				
-				key =	0	2	0.00000E+00	0.00000E+00
-				key =	191	2	0.00000E+00	0.00000E+00
-				key =	379	2	0.00000E+00	0.00000E+00
-				key =	564	2	0.00000E+00	0.00000E+00
-				key =	748	2	0.00000E+00	0.00000E+00
-				key =	933	2	0.00000E+00	0.00000E+00
-				key =	1000	2	0.00000E+00	0.00000E+00
-			}				
+			temperatureCurve
+			{
+				key = 	0	100	0	0
+				key = 	1000	100	0	0
+			}			
 			temperatureSunMultCurve				
 			{				
 				key =	0	1.000	0.00000E+00	-5.24607E-03
