Atmospheric visual improvements
* Increase altitude of Scatterer atmospheres for Viszra, Jejunum, and Zeppeli
* I have no idea how but Cricoid was given a thick green atmosphere instead of the correct thin blue one. That has been remedied; Cricoid has a high but thin blue atmosphere.
* Bring Dopale atmosphere in line with default scatterer configuration for Kerbin. It's not exactly the same of course but it's a lot more familiar. Atmosphere no longer dark and underexposed.
* Beddul's atmosphere has been revamped entirely. Its clouds are also less bizarrely transparent, although I could not hammer out all of the visual bugs.

--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/ScattererEVE/BeddulClouds.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/ScattererEVE/BeddulClouds.cfg
@@ -4,25 +4,48 @@ EVE_CLOUDS
 	{
 		name = BeddulOrangeClouds
 		body = Beddul
-		altitude = 9000
-		speed = 0,100,0
-		detailSpeed = 0,6,0
+		speed = 0,5,0
+		detailSpeed = 0,2,0
+		altitude = 11300
 		settings
 		{
-			_DetailScale = 12
-			_UVNoiseScale = 1
-			_UVNoiseStrength = 0.03
-			_UVNoiseAnimation = -0.02,0.0
-			_UVNoiseTex = PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/ScattererEVE/Textures/UV
-			_MainTex = PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/ScattererEVE/Textures/CloudsOrange
-			_DetailTex = PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/ScattererEVE/Textures/Detail4
-			_Color = 255,255,255,255
+			_DetailTex = PJ2/EVE/CommonTextures/detail1
+			_DetailScale = 30
+			_UVNoiseTex = PJ2/EVE/CommonTextures/uvnoise1
+			_Color = 255,255,255,250
+			_UVNoiseScale = 0.09
+			_UVNoiseStrength = 0.002
+			_UVNoiseAnimation = 0.001,0.002
+			_MainTex
+			{
+				value = PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/ScattererEVE/Textures/CloudsOrange
+			}
+		}
+		layerVolume
+		{
+			maxTranslation = 100,200,100
+			size = 2000,2.2
+			area = 18000,4
+			noiseScale = 1.2,1.3,90
+			particleMaterial
+			{
+				_Tex = PJ2/EVE/CommonTextures/particle/rgb
+				_BumpMap = PJ2/EVE/CommonTextures/particle_NRM
+				_LightScatter = 0.55
+			}
 		}
 		layer2D
 		{
 			macroCloudMaterial
 			{
-				_DetailDist = 2E-7
+				//_RimDist = 1
+				//_InvFade = 1
+				//_FalloffScale = 10
+				//_FalloffPow = 10
+				//_MinLight = 0
+			}
+			shadowMaterial
+			{
 			}
 		}
 	}
@@ -30,25 +53,47 @@ EVE_CLOUDS
 	{
 		name = BeddulBrownClouds
 		body = Beddul
-		altitude = 13500
-		speed = 0,200,0
-		detailSpeed = 0,2,0
+		altitude = 14500
+		speed = 0,7,0
+		detailSpeed = 0,1,0
 		settings
 		{
-			_DetailScale = 12
-			_UVNoiseScale = 1
-			_UVNoiseStrength = 0.03
-			_UVNoiseAnimation = -0.01,0.0
-			_UVNoiseTex = PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/ScattererEVE/Textures/UV
-			_MainTex = PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/ScattererEVE/Textures/CloudsBrown
-			_DetailTex = PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/ScattererEVE/Textures/Detail4
-			_Color = 255,255,255,255
+			_DetailTex = PJ2/EVE/CommonTextures/detail1
+			_DetailScale = 30
+			_UVNoiseTex = PJ2/EVE/CommonTextures/uvnoise1
+			_Color = 255,255,255,250
+			_UVNoiseScale = 0.09
+			_UVNoiseStrength = 0.002
+			_UVNoiseAnimation = 0.001,0.002
+			_MainTex
+			{
+				value = PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/ScattererEVE/Textures/CloudsBrown
+			}
 		}
 		layer2D
 		{
+			shadowMaterial
+			{
+			}
 			macroCloudMaterial
 			{
-				_DetailDist = 2E-7
+				//_DetailDist = 2E-06
+				//_FalloffPow = 10
+				//_FalloffScale = 10
+				//_MinLight = 0
+			}
+		}
+		layerVolume
+		{
+			maxTranslation = 100,200,100
+			size = 2000,2.2
+			area = 18000,4
+			noiseScale = 1.2,1.3,90
+			particleMaterial
+			{
+				_Tex = PJ2/EVE/CommonTextures/particle/rgb
+				_BumpMap = PJ2/EVE/CommonTextures/particle_NRM
+				_LightScatter = 0.55
 			}
 		}
 	}
@@ -56,25 +101,46 @@ EVE_CLOUDS
 	{
 		name = BeddulWhiteClouds
 		body = Beddul
-		altitude = 11500
-		speed = 0,130,0
-		detailSpeed = 0,10,0
+		altitude = 12500
+		speed = 0,6,0
+		detailSpeed = 0,3,0
 		settings
 		{
-			_DetailScale = 12
-			_UVNoiseScale = 1
-			_UVNoiseStrength = 0.05
-			_UVNoiseAnimation = -0.169,0.0
-			_UVNoiseTex = PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/ScattererEVE/Textures/UV
-			_MainTex = PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/ScattererEVE/Textures/CloudsWhite
-			_DetailTex = PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/ScattererEVE/Textures/Detail4
-			_Color = 255,255,255,255
+			_DetailTex = PJ2/EVE/CommonTextures/detail1
+			_DetailScale = 30
+			_UVNoiseTex = PJ2/EVE/CommonTextures/uvnoise1
+			_Color = 255,255,255,250
+			_UVNoiseScale = 0.09
+			_UVNoiseStrength = 0.002
+			_UVNoiseAnimation = 0.001,0.002
+			_MainTex
+			{
+				value = PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/ScattererEVE/Textures/CloudsBrown
+			}
+		}
+		layerVolume
+		{
+			maxTranslation = 100,200,100
+			size = 2000,2.2
+			area = 18000,4
+			noiseScale = 1.2,1.3,90
+			particleMaterial
+			{
+				_Tex = PJ2/EVE/CommonTextures/particle/rgb
+				_BumpMap = PJ2/EVE/CommonTextures/particle_NRM
+				_LightScatter = 0.55
+			}
 		}
 		layer2D
 		{
 			macroCloudMaterial
 			{
-				_DetailDist = 2E-7
+				//_FalloffPow = 10
+				//_FalloffScale = 10
+				//_MinLight = 0
+			}
+			shadowMaterial
+			{
 			}
 		}
 	}
