--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/ScattererEVE/BeddulScatterer.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/ScattererEVE/BeddulScatterer.cfg
@@ -41,17 +41,17 @@
 	{
 		name = Beddul
 		cloudColorMultiplier = 1
-		cloudScatteringMultiplier = 0.1
+		cloudScatteringMultiplier = 0.18
 		cloudSkyIrradianceMultiplier = 0.0
 		volumetricsColorMultiplier = 1
 		atmosphereGlobalScale = 1
 		EVEIntegration_preserveCloudColors = True
 		godrayStrength = 4.5
-		HR = 8.5
-		HM = 3.5
-		BETA_MSca = 0.0014,0.0024,0.0040
-		m_betaR = 0.0106,0.0170,0.0232 
-		m_mieG = 0.9
+		HR = 5.5
+		HM = 12.5
+		BETA_MSca = 0.0024,0.0036,0.0060
+		m_betaR = 0.029986,0.023988,0.014393
+		m_mieG = 0.0
 		rimBlend = 0
 		rimpower = 300
 		specR = 0
@@ -63,16 +63,15 @@
 			Item
 			{
 				altitude = 0
-				skyExposure = 0.07
+				skyExposure = 0.18
 				skyAlpha = 1
 				skyExtinctionTint = 1
-				scatteringExposure = 0.07
-				extinctionThickness = 0
-				postProcessAlpha = 1
-				postProcessDepth = 0.0799999982
-				extinctionTint = 0.5
-				openglThreshold = 10
-				viewdirOffset = 0
+				scatteringExposure = 0.18
+				extinctionThickness = 1.0
+				postProcessAlpha = 1.2
+				postProcessDepth = 0.0
+				extinctionTint = 1.0
+				//openglThreshold = 10
 			}
 		}
 	}
