--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/ScattererEVE/DopaleScatterer.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/ScattererEVE/DopaleScatterer.cfg
@@ -48,11 +48,11 @@
 		atmosphereGlobalScale = 1
 		EVEIntegration_preserveCloudColors = False
 		godrayStrength = 4.5
-		HR = 7.5
-		HM = 3.5
-		BETA_MSca = 0.0014,0.0024,0.0040
-		m_betaR = 0.0106,0.0170,0.0232 
-		m_mieG = 0.9
+		HR = 3.7
+		HM = 1.8
+		BETA_MSca = 0.0014,0.002,0.004
+		m_betaR = 0.012,0.028,0.068 
+		m_mieG = 0.7
 		rimBlend = 0
 		rimpower = 300
 		specR = 30
@@ -64,16 +64,15 @@
 			Item
 			{
 				altitude = 0
-				skyExposure = 0.07
+				skyExposure = 0.17
 				skyAlpha = 1
 				skyExtinctionTint = 1
-				scatteringExposure = 0.07
+				scatteringExposure = 0.17
 				extinctionThickness = 0
 				postProcessAlpha = 1
 				postProcessDepth = 0.0799999982
 				extinctionTint = 0.5
-				openglThreshold = 10
-				viewdirOffset = 0
+				//openglThreshold = 10
 			}
 		}
 	}
