--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/ScattererEVE/EVEclouds.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/ScattererEVE/EVEclouds.cfg
@@ -1,7 +1,7 @@
 //this file has been disabled, at least temporarily, since the clouds appear transparent when you get close enough with EVE installed and it just seems like they shouldn't. -Luna
 @Kopernicus:AFTER[PJ2]:NEEDS[EnvironmentalVisualEnhancements]
 {
-	@Body[IlioC_dt_binarylarge]
+	@Body[Beddul]
 	{
 		@cacheFile = PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/Cash/IlioC_dt_binarylargeEVE.bin
 		@ScaledVersion
@@ -23,8 +23,8 @@
 		@PQS
 		{
 			%fadeStart = 60000
-			%fadeEnd = 90000
-			%deactivateAltitude = 120000
+			%fadeEnd = 70000
+			%deactivateAltitude = 72500
 		}
 	}
 }
