--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/EVE/Jejunum_Glow.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/EVE/Jejunum_Glow.cfg
@@ -1,4 +1,4 @@
-EVE_CLOUDS //Reverse engineered from configs written by Sabine with permission, thank you so much Sabine (WarriorSabe)
+EVE_CLOUDS
 {
 	OBJECT
 	{
