--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/EVE/Sandevistan_Glow.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/EVE/Sandevistan_Glow.cfg
@@ -1,9 +1,9 @@
-EVE_CLOUDS //Reverse engineered from configs written by Sabine with permission, thank you so much Sabine (WarriorSabe)
+EVE_CLOUDS
 {
 	OBJECT
 	{
 		name = SandevistanGlowDetail
-		body = Sandevistan //PJ2/Sandevistan
+		body = Sandevistan
 		altitude = 0
 		speed = 0,0,0
 		killBodyRotation = False
@@ -34,7 +34,7 @@ EVE_CITY_LIGHTS
 	OBJECT
 	{
 		name = SandevistanTerrainThermal
-		body = Sandevistan 
+		body = Sandevistan
 		cityLightsMaterial
 		{
 			_CityOverlayTex
